--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <script type="module" src="/static/main.js"></script>
   <link rel="stylesheet" href="/static/css/styles.css">
-  <link rel="icon" href="/static/img/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/static/img/interface/favicon.ico" type="image/x-icon">
 </head>
 <body>
   <nav class="navbar" id="navbar">
