--- a/index.html
+++ b/index.html
@@ -7,14 +7,20 @@
   <link rel="stylesheet" href="/static/css/styles.css">
   <link rel="icon" href="/static/img/interface/favicon.ico" type="image/x-icon">
 </head>
+
 <body>
   <nav class="navbar" id="navbar">
     <ul class="navbar-ul">
-        <li class="navbar-element search-icon" id="search-icon"><img src="/static/img/interface/search.svg" alt="Search"></li>
-        <li class="navbar-element settings-icon" id="settings-icon" onclick="toggleVisibilitySettings()"><img src="/static/img/interface/settings.svg"></li>
-        <li class="navbar-element edit-icon" id="edit-icon"><img src="/static/img/interface/edit.svg" alt="Edit"></li>
+        <li class="navbar-element search-icon" id="search-icon"><img src="/static/img/interface/search.png" alt="Search"></li>
+        <li class="navbar-element settings-icon" id="settings-icon" onclick="toggleVisibilitySettings()"><img src="/static/img/interface/settings.png"></li>
+        <li class="navbar-element edit-icon" id="edit-icon"><img src="/static/img/interface/edit.png" alt="Edit"></li>
     </ul>
   </nav>
+  
+  <div id="search-menu" class="search-menu hidden">
+    <input type="text" id="search-input" placeholder="Enter planet name..." />
+    <ul id="search-results"></ul>
+  </div>
 
   <div class="description-wrapper hidden" id="description-wrapper"> 
     <div class="description" id = "description">
@@ -25,11 +31,12 @@
     <div class="settings" id = "settings">
       <h1 class="h1 settings-title">Настройки</h1>
       <div class="settings-blocks">
-        <div class="setting-block setting-block-sound">
+        <div class="settings-block settings-block-sound">
           <label class="switch">
-            <input type="checkbox">
+            <input type="checkbox" id="checkbox-sound" checked>
             <span class="slider"></span>
           </label>
+          <div class="settings-block-text">Звук отклика</div>
         </div>
         </div>
       </div>
@@ -38,13 +45,17 @@
   
   <button class="discoverButton hidden" id="showDescriptionButton" onclick="toggleVisibility()">
     <div class="planet" id="planet">
+      <!-- рендер из loader.js -->
     </div>
     <p class="discoverButton-discover">Исследовать</p>
   </button>
 
 <audio id="click-sound" src="/static/sounds/click.mp3" preload="auto" audio.volume = 0.1></audio>
+
 <script src="/static/js/loader.js" defer></script>
 <script src="/static/js/sound.js" defer></script>
 <script src="/static/js/script.js" defer></script>
+<script src="/static/js/checkIntersection.js" defer></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/18.6.4/tween.umd.js"></script>
 </body>
 </html>
