--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
   <nav class="navbar" id="navbar">
     <ul class="navbar-ul">
-        <li class="navbar-element search-icon" id="search-icon"><img src="/static/img/interface/search.svg" alt="Search"></li>
-        <li class="navbar-element settings-icon" id="settings-icon" onclick="toggleVisibilitySettings()"><img src="/static/img/interface/settings.svg"></li>
-        <li class="navbar-element edit-icon" id="edit-icon"><img src="/static/img/interface/edit.svg" alt="Edit"></li>
+        <li class="navbar-element search-icon" id="search-icon"><img src="/static/img/interface/search.png" alt="Search"></li>
+        <li class="navbar-element settings-icon" id="settings-icon" onclick="toggleVisibilitySettings()"><img src="/static/img/interface/settings.png"></li>
+        <li class="navbar-element edit-icon" id="edit-icon"><img src="/static/img/interface/edit.png" alt="Edit"></li>
     </ul>
   </nav>
   
@@ -32,13 +32,10 @@
       <h1 class="h1 settings-title">Настройки</h1>
       <div class="settings-blocks">
         <div class="settings-block settings-block-sound">
-        <div class="settings-block settings-block-sound">
           <label class="switch">
-            <input type="checkbox" id="checkbox-sound" checked>
             <input type="checkbox" id="checkbox-sound" checked>
             <span class="slider"></span>
           </label>
-          <div class="settings-block-text">Звук отклика</div>
           <div class="settings-block-text">Звук отклика</div>
         </div>
         </div>
@@ -49,18 +46,15 @@
   <button class="discoverButton hidden" id="showDescriptionButton" onclick="toggleVisibility()">
     <div class="planet" id="planet">
       <!-- рендер из loader.js -->
-      <!-- рендер из loader.js -->
     </div>
     <p class="discoverButton-discover">Исследовать</p>
   </button>
 
 <audio id="click-sound" src="/static/sounds/click.mp3" preload="auto" audio.volume = 0.1></audio>
 
-
 <script src="/static/js/loader.js" defer></script>
 <script src="/static/js/sound.js" defer></script>
 <script src="/static/js/script.js" defer></script>
-<script src="/static/js/checkIntersection.js" defer></script>
 <script src="/static/js/checkIntersection.js" defer></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/18.6.4/tween.umd.js"></script>
 </body>
