--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
     <ul id="search-results"></ul>
   </div>
 
-  <div class="description-wrapper hidden" id="description-wrapper"> 
+  <div class="wrapper hidden" id="description-wrapper"> 
     <div class="description" id = "description">
     </div>
   </div>
 
-  <div class="settings-wrapper hidden" id="settings-wrapper"> 
+  <div class="wrapper hidden" id="settings-wrapper"> 
     <div class="settings" id = "settings">
       <h1 class="h1 settings-title">Настройки</h1>
       <div class="settings-blocks">
