--- a/index.html
+++ b/index.html
@@ -11,17 +11,12 @@
 <body>
   <nav class="navbar" id="navbar">
     <ul class="navbar-ul">
-        <li class="navbar-element search-icon" id="search-icon"><img src="/static/img/interface/search.png" alt="Search"></li>
+        <li class="navbar-element search-icon" id="search-icon" onclick="toggleVisibilitySearch()"><img src="/static/img/interface/search.png" alt="Search"></li>
         <li class="navbar-element settings-icon" id="settings-icon" onclick="toggleVisibilitySettings()"><img src="/static/img/interface/settings.png"></li>
         <li class="navbar-element edit-icon" id="edit-icon"><img src="/static/img/interface/edit.png" alt="Edit"></li>
     </ul>
   </nav>
   
-  <div id="search-menu" class="search-menu hidden">
-    <input type="text" id="search-input" placeholder="Enter planet name..." />
-    <ul id="search-results"></ul>
-  </div>
-
   <div class="wrapper hidden" id="description-wrapper"> 
     <div class="description" id = "description">
     </div>
@@ -42,6 +37,41 @@
       </div>
     </div>
   </div>
+
+  <div class="wrapper hidden" id="search-wrapper"> 
+    <div class="search" id="search">
+        <form class="search-form" id="search-form">
+          <input id="search-input" name="search-input" type="text" class="search-input" placeholder="Enter planet name...">
+        </form>
+        <ul id="search-results">
+          <li class="planet-card">
+            <img src="/static/img/discoverButton-icons/earth.png" class="planet-card-img">
+            <div class="planet-card-text">Земля</div>
+          </li>
+          <li class="planet-card">
+            <img src="/static/img/discoverButton-icons/earth.png" class="planet-card-img">
+            <div class="planet-card-text">Земля</div>
+          </li>
+          <li class="planet-card">
+            <img src="/static/img/discoverButton-icons/earth.png" class="planet-card-img">
+            <div class="planet-card-text">Земля</div>
+          </li>
+          <li class="planet-card">
+            <img src="/static/img/discoverButton-icons/earth.png" class="planet-card-img">
+            <div class="planet-card-text">Земля</div>
+          </li>
+          <li class="planet-card">
+            <img src="/static/img/discoverButton-icons/earth.png" class="planet-card-img">
+            <div class="planet-card-text">Земля</div>
+          </li>
+          <li class="planet-card">
+            <img src="/static/img/discoverButton-icons/earth.png" class="planet-card-img">
+            <div class="planet-card-text">Земля</div>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
   
   <button class="discoverButton hidden" id="showDescriptionButton" onclick="toggleVisibility()">
     <div class="planet" id="planet">
@@ -50,12 +80,12 @@
     <p class="discoverButton-discover">Исследовать</p>
   </button>
 
-<audio id="click-sound" src="/static/sounds/click.mp3" preload="auto" audio.volume = 0.1></audio>
+  <audio id="click-sound" src="/static/sounds/click.mp3" preload="auto" audio.volume = 0.1></audio>
 
-<script src="/static/js/loader.js" defer></script>
-<script src="/static/js/sound.js" defer></script>
-<script src="/static/js/script.js" defer></script>
-<script src="/static/js/checkIntersection.js" defer></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/18.6.4/tween.umd.js"></script>
+  <script src="/static/js/loader.js" defer></script>
+  <script src="/static/js/sound.js" defer></script>
+  <script src="/static/js/script.js" defer></script>
+  <script src="/static/js/checkIntersection.js" defer></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/18.6.4/tween.umd.js"></script>
 </body>
 </html>
