add search, ad pluto description

--- a/index.html
+++ b/index.html
@@ -44,29 +44,33 @@
           <input id="search-input" name="search-input" type="text" class="search-input" placeholder="Enter planet name...">
         </form>
         <ul id="search-results">
-          <li class="planet-card">
+          <li class="planet-card" data-name-rus="Земля" data-name-eng="Earth">
             <img src="/static/img/discoverButton-icons/earth.png" class="planet-card-img">
             <div class="planet-card-text">Земля</div>
           </li>
-          <li class="planet-card">
-            <img src="/static/img/discoverButton-icons/earth.png" class="planet-card-img">
-            <div class="planet-card-text">Земля</div>
+          <li class="planet-card" data-name-rus="Марс" data-name-eng="Mars">
+            <img src="/static/img/discoverButton-icons/mars.png" class="planet-card-img">
+            <div class="planet-card-text">Марс</div>
           </li>
-          <li class="planet-card">
-            <img src="/static/img/discoverButton-icons/earth.png" class="planet-card-img">
-            <div class="planet-card-text">Земля</div>
+          <li class="planet-card" data-name-rus="Венера" data-name-eng="Venus">
+            <img src="/static/img/discoverButton-icons/venus.png" class="planet-card-img">
+            <div class="planet-card-text">Венера</div>
           </li>
-          <li class="planet-card">
-            <img src="/static/img/discoverButton-icons/earth.png" class="planet-card-img">
-            <div class="planet-card-text">Земля</div>
+          <li class="planet-card" data-name-rus="Юпитер" data-name-eng="Jupiter">
+            <img src="/static/img/discoverButton-icons/jupiter.png" class="planet-card-img">
+            <div class="planet-card-text">Юпитер</div>
           </li>
-          <li class="planet-card">
-            <img src="/static/img/discoverButton-icons/earth.png" class="planet-card-img">
-            <div class="planet-card-text">Земля</div>
+          <li class="planet-card" data-name-rus="Сатурн" data-name-eng="Saturn">
+            <img src="/static/img/discoverButton-icons/saturn.png" class="planet-card-img">
+            <div class="planet-card-text">Сатурн</div>
           </li>
-          <li class="planet-card">
-            <img src="/static/img/discoverButton-icons/earth.png" class="planet-card-img">
-            <div class="planet-card-text">Земля</div>
+          <li class="planet-card" data-name-rus="Нептун" data-name-eng="Neptune">
+            <img src="/static/img/discoverButton-icons/neptune.png" class="planet-card-img">
+            <div class="planet-card-text">Нептун</div>
+          </li>
+          <li class="planet-card" data-name-rus="Плутон" data-name-eng="Pluto">
+            <img src="/static/img/discoverButton-icons/pluto.png" class="planet-card-img">
+            <div class="planet-card-text">Плутон</div>
           </li>
         </ul>
       </div>
