--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <nav class="navbar" id="navbar">
     <ul class="navbar-ul">
-        <li class="navbar-element search-icon" id="search-icon" onclick="toggleVisibilitySearch()"><img src="/static/img/interface/search.png" alt="Search"></li>
+        <li class="navbar-element search-icon" id="search-icon"  onclick="toggleVisibilitySearch()"><img src="/static/img/interface/search.png" alt="Search"></li>
         <li class="navbar-element settings-icon" id="settings-icon" onclick="toggleVisibilitySettings()"><img src="/static/img/interface/settings.png"></li>
         <li class="navbar-element edit-icon" id="edit-icon"><img src="/static/img/interface/edit.png" alt="Edit"></li>
     </ul>
@@ -40,48 +40,22 @@
 
   <div class="wrapper hidden" id="search-wrapper"> 
     <div class="search" id="search">
-        <form class="search-form" id="search-form">
-          <input id="search-input" name="search-input" type="text" class="search-input" placeholder="Enter planet name...">
-        </form>
-        <ul id="search-results">
-          <li class="planet-card" data-name-rus="Земля" data-name-eng="Earth">
-            <img src="/static/img/discoverButton-icons/earth.png" class="planet-card-img">
-            <div class="planet-card-text">Земля</div>
-          </li>
-          <li class="planet-card" data-name-rus="Марс" data-name-eng="Mars">
-            <img src="/static/img/discoverButton-icons/mars.png" class="planet-card-img">
-            <div class="planet-card-text">Марс</div>
-          </li>
-          <li class="planet-card" data-name-rus="Венера" data-name-eng="Venus">
-            <img src="/static/img/discoverButton-icons/venus.png" class="planet-card-img">
-            <div class="planet-card-text">Венера</div>
-          </li>
-          <li class="planet-card" data-name-rus="Юпитер" data-name-eng="Jupiter">
-            <img src="/static/img/discoverButton-icons/jupiter.png" class="planet-card-img">
-            <div class="planet-card-text">Юпитер</div>
-          </li>
-          <li class="planet-card" data-name-rus="Сатурн" data-name-eng="Saturn">
-            <img src="/static/img/discoverButton-icons/saturn.png" class="planet-card-img">
-            <div class="planet-card-text">Сатурн</div>
-          </li>
-          <li class="planet-card" data-name-rus="Нептун" data-name-eng="Neptune">
-            <img src="/static/img/discoverButton-icons/neptune.png" class="planet-card-img">
-            <div class="planet-card-text">Нептун</div>
-          </li>
-          <li class="planet-card" data-name-rus="Плутон" data-name-eng="Pluto">
-            <img src="/static/img/discoverButton-icons/pluto.png" class="planet-card-img">
-            <div class="planet-card-text">Плутон</div>
-          </li>
-        </ul>
-      </div>
+      <form class="search-form" id="search-form">
+        <input id="search-input" name="search-input" type="text" class="search-input" placeholder="Enter planet name...">
+      </form>
+      <ul id="search-results">
+        <!-- рендер из main.js -->
+      </ul>
     </div>
   </div>
-  
+
   <button class="discoverButton hidden" id="showDescriptionButton" onclick="toggleVisibility()">
-    <div class="planet" id="planet">
-      <!-- рендер из loader.js -->
+    <div class="button-content">
+      <div class="planet" id="planet">
+        <!-- рендер из loader.js -->
+      </div>
+      <p class="discoverButton-discover">Исследовать</p>
     </div>
-    <p class="discoverButton-discover">Исследовать</p>
   </button>
 
   <audio id="click-sound" src="/static/sounds/click.mp3" preload="auto" audio.volume = 0.1></audio>
@@ -89,7 +63,6 @@
   <script src="/static/js/loader.js" defer></script>
   <script src="/static/js/sound.js" defer></script>
   <script src="/static/js/script.js" defer></script>
-  <script src="/static/js/checkIntersection.js" defer></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/18.6.4/tween.umd.js"></script>
 </body>
 </html>
