--- a/index.html
+++ b/index.html
@@ -11,23 +11,18 @@
 <body>
   <nav class="navbar" id="navbar">
     <ul class="navbar-ul">
-        <li class="navbar-element search-icon" id="search-icon"><img src="/static/img/interface/search.png" alt="Search"></li>
+        <li class="navbar-element search-icon" id="search-icon"  onclick="toggleVisibilitySearch()"><img src="/static/img/interface/search.png" alt="Search"></li>
         <li class="navbar-element settings-icon" id="settings-icon" onclick="toggleVisibilitySettings()"><img src="/static/img/interface/settings.png"></li>
         <li class="navbar-element edit-icon" id="edit-icon"><img src="/static/img/interface/edit.png" alt="Edit"></li>
     </ul>
   </nav>
   
-  <div id="search-menu" class="search-menu hidden">
-    <input type="text" id="search-input" placeholder="Enter planet name..." />
-    <ul id="search-results"></ul>
-  </div>
-
-  <div class="description-wrapper hidden" id="description-wrapper"> 
+  <div class="wrapper hidden" id="description-wrapper"> 
     <div class="description" id = "description">
     </div>
   </div>
 
-  <div class="settings-wrapper hidden" id="settings-wrapper"> 
+  <div class="wrapper hidden" id="settings-wrapper"> 
     <div class="settings" id = "settings">
       <h1 class="h1 settings-title">Настройки</h1>
       <div class="settings-blocks">
@@ -42,20 +37,64 @@
       </div>
     </div>
   </div>
-  
-  <button class="discoverButton hidden" id="showDescriptionButton" onclick="toggleVisibility()">
-    <div class="planet" id="planet">
-      <!-- рендер из loader.js -->
+
+  <div class="wrapper hidden" id="search-wrapper"> 
+    <div class="search" id="search">
+      <form class="search-form" id="search-form">
+        <input id="search-input" name="search-input" type="text" class="search-input" placeholder="Enter planet name...">
+      </form>
+      <ul id="search-results">
+        <!-- рендер из main.js -->
+      </ul>
     </div>
-    <p class="discoverButton-discover">Исследовать</p>
+  </div>
+
+  <button class="discoverButton hidden" id="showDescriptionButton" onclick="toggleVisibility()">
+    <div class="button-content">
+      <div class="planet" id="planet">
+        <!-- рендер из loader.js -->
+      </div>
+      <p class="discoverButton-discover">Исследовать</p>
+    </div>
   </button>
 
-<audio id="click-sound" src="/static/sounds/click.mp3" preload="auto" audio.volume = 0.1></audio>
+  <button id="pause-btn">Pause</button>
 
-<script src="/static/js/loader.js" defer></script>
-<script src="/static/js/sound.js" defer></script>
-<script src="/static/js/script.js" defer></script>
-<script src="/static/js/checkIntersection.js" defer></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/18.6.4/tween.umd.js"></script>
+  <div id="editor-menu" class="editor-menu hidden">
+    <h3>Редактор планеты</h3>
+    <label for="planet-select">Выберите планету:</label>
+    <select id="planet-select">
+      <option value="" disabled selected>Выберите планету</option>
+        <option value="Mercury">Mercury</option>
+        <option value="Venus">Venus</option>
+        <option value="Earth">Earth</option>
+        <option value="Mars">Mars</option>
+        <option value="Jupiter">Jupiter</option>
+        <option value="Saturn">Saturn</option>
+        <option value="Uranus">Uranus</option>
+        <option value="Neptune">Neptune</option>
+        <option value="Pluto">Pluto</option>
+    </select>
+
+    <label for="mass-input">Масса:</label>
+    <input type="number" id="mass-input" step="0.01" autocomplete="on">
+
+    <label for="velocity-input">Скорость:</label>
+    <input type="number" id="velocity-input" step="0.01" autocomplete="on">
+
+    <label for="radius-input">Радиус:</label>
+    <input type="number" id="radius-input" step="0.1" autocomplete="on">
+
+    <button id="apply-changes">Применить</button>
+  </div>
+
+  <button id="toggle-editor">Редактор</button>
+
+  <audio id="click-sound" src="/static/sounds/click.mp3" preload="auto" audio.volume = 0.1></audio>
+
+  <script src="/static/js/loader.js" defer></script>
+  <script src="/static/js/sound.js" defer></script>
+  <script src="/static/js/script.js" defer></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/18.6.4/tween.umd.js"></script>
 </body>
 </html>
