start editor design, refactor almost everything

--- a/static/descriptions/jupiter.html
+++ b/static/descriptions/jupiter.html
@@ -1,6 +1,6 @@
-<h1 class="h1 description-title">Юпитер</h1>
-<div class="description-blocks">
-    <table class="description-table">
+<h1 class="h1">Юпитер</h1>
+<div class="description__blocks">
+    <table>
         <tbody>
             <tr>
                 <td>Диаметр</td>
@@ -40,23 +40,23 @@
             </tr>
         </tbody>
     </table>
-    <div class="description-block">
-        <h5 class="description-block-title">Общие характеристики и атмосфера</h5>
+    <div class="description__block">
+        <h5>Общие характеристики и атмосфера</h5>
         <p>Юпитер — крупнейшая планета в Солнечной системе, состоит в основном из водорода и гелия. Атмосфера содержит облака из аммиачного льда, метана и водяного пара. Юпитер не имеет твёрдой поверхности, так как состоит из газа и жидкости.</p>
     </div>
 
-    <div class="description-block">
-        <h5 class="description-block-title">Климат и атмосфера</h5>
+    <div class="description__block">
+        <h5>Климат и атмосфера</h5>
         <p>Юпитер имеет сильные атмосферные вихри, включая знаменитую Красную пятно — гигантскую бурю, которая бушует уже сотни лет. Его атмосфера преимущественно состоит из водорода и гелия, а температура на высоте облаков около -145°C.</p>
     </div>
 
-    <div class="description-block">
-        <h5 class="description-block-title">Ось вращения и орбитальное движение</h5>
+    <div class="description__block">
+        <h5>Ось вращения и орбитальное движение</h5>
         <p>Юпитер совершает оборот вокруг своей оси за 9 часов 55 минут, что делает его самой быстрой вращающейся планетой. Его орбитальный период составляет 11,86 лет. Планета находится на расстоянии около 778,5 млн км от Солнца.</p>
     </div>
 
-    <div class="description-block">
-        <h5 class="description-block-title">Спутники и кольца</h5>
+    <div class="description__block">
+        <h5>Спутники и кольца</h5>
         <p>Юпитер имеет более 70 известных спутников, включая крупнейший спутник в Солнечной системе — Ганимед. Также планета имеет кольца, которые трудно увидеть из-за их низкой яркости.</p>
     </div>
 </div>
