--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   </div>
 
   <div class="wrapper editor hidden" id="editor__menu-wrapper">
-    <h1 class="h1">Земля</h1>
+    <!-- <h1 class="h1">Земля</h1>
     <div class="editor__menu" id="editor__menu">
       <div class="editor__block">
         <label class="editor__label" for="mass-input">Масса:</label>
@@ -85,7 +85,7 @@
       <div class="editor__block"></div>
         <label class="editor__label" for="radius-input">Радиус:</label>
         <input class="editor__input" type="range" id="radius-input" step="0.1" autocomplete="on">
-      </div>
+      </div> -->
       
       <!-- <button class="editor__button" id="editor__button">Применить</button> -->
     </div>
