delete comment in index.html

--- a/index.html
+++ b/index.html
@@ -71,24 +71,7 @@
   </div>
 
   <div class="wrapper editor hidden" id="editor__menu-wrapper">
-    <!-- <h1 class="h1">Земля</h1>
-    <div class="editor__menu" id="editor__menu">
-      <div class="editor__block">
-        <label class="editor__label" for="mass-input">Масса:</label>
-        <input class="editor__input" type="range" id="mass-input" step="0.01" autocomplete="on">
-      </div>
-      <div class="editor__block"></div>
-        <label class="editor__label" for="velocity-input">Скорость:</label>
-        <input class="editor__input" type="range" id="velocity-input" step="0.01" autocomplete="on">
-      </div>
-
-      <div class="editor__block"></div>
-        <label class="editor__label" for="radius-input">Радиус:</label>
-        <input class="editor__input" type="range" id="radius-input" step="0.1" autocomplete="on">
-      </div> -->
-      
-      <!-- <button class="editor__button" id="editor__button">Применить</button> -->
-    </div>
+    <!-- рендер из loader.js -->
   </div>
 
   <div id="editor-menu" class="editor-menu hidden">
