add translation in exploreButton

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
   <button class="explore-button hidden" id="explore-button" aria-label="Explore">
     <div class="explore-button__content">
-      <div id="planet">
-        <!-- рендер из explore-button__content -->
-      </div>
-      <p class="explore-button__text">Исследовать</p>
+        <div id="planet">
+            <!-- рендер из explore-button__content -->
+        </div>
+        <p class="explore-button__text" data-i18n="explore">Исследовать</p>
     </div>
   </button>
   
