--- a/static/explore-button__content/mercury.html
+++ b/static/explore-button__content/mercury.html
@@ -1,2 +1,2 @@
 <img src="/static/img/explore-button__imgs/mercury.png" height="80" width="80">
-<h5>Меркурий</h5>
+<h5 data-i18n="mercury">Меркурий</h5>
