--- a/static/explore-button__content/jupiter.html
+++ b/static/explore-button__content/jupiter.html
@@ -1,2 +1,2 @@
 <img src="/static/img/explore-button__imgs/jupiter.png" height="80" width="80">
-<h5>Юпитер</h5>
+<h5 data-i18n="jupiter">Юпитер</h5>
