--- a/static/explore-button__content/neptune.html
+++ b/static/explore-button__content/neptune.html
@@ -1,2 +1,2 @@
 <img src="/static/img/explore-button__imgs/neptune.png" height="80" width="80">
-<h5>Нептун</h5>
+<h5 data-i18n="neptune">Нептун</h5>
