fix saturn description bug

--- a/static/descriptions/ru/saturn.html
+++ b/static/descriptions/ru/saturn.html
@@ -57,4 +57,6 @@
     
     <div class="description__block">
         <h5>Кольца и особенности</h5>
-        <p>Сатурн знаменит своими кольцами, состоящими из миллиардов частиц льда, камня и пыли. Эти кольца разделены на несколько секций и имеют различные плотности. Они я
+        <p>Сатурн знаменит своими кольцами, состоящими из миллиардов частиц льда, камня и пыли. Эти кольца разделены на несколько секций и имеют различные плотности. Они являются самыми широкими и яркими в Солнечной системе, простираясь на сотни тысяч километров, но при этом их толщина не превышает нескольких десятков метров. Кольца Сатурна постоянно изменяются под воздействием гравитации его спутников, создавая сложные структуры и волновые узоры.</p>
+    </div>
+</div>
