--- a/static/descriptions/en/saturn.html
+++ b/static/descriptions/en/saturn.html
@@ -57,7 +57,6 @@
     
     <div class="description__block">
         <h5>Rings and Features</h5>
-        <p>Saturn is famous for its rings, composed of billions of ice particles, rocks, and dust. These rings are divided into several sections and have varying densities. They are...
-        </p>
+        <p>Saturn is famous for its rings, which consist of billions of particles of ice, rock, and dust. These rings are divided into several sections and have varying densities. They are the widest and brightest in the Solar System, stretching for hundreds of thousands of kilometers, yet their thickness does not exceed a few dozen meters. Saturn's rings are constantly changing under the influence of its moons' gravity, creating complex structures and wave patterns.</p>
     </div>
 </div>
