add text align for arabic language

--- a/static/descriptions/ar/jupiter.html
+++ b/static/descriptions/ar/jupiter.html
@@ -1,61 +1,61 @@
 <h1 class="h1">المشتري</h1>
 <div class="description__blocks">
-    <table>
+    <table class="arabic-table">
         <tbody>
             <tr>
-                <td>القطر</td>
                 <td>139,820 كم</td>
+                <td>القطر</td>
             </tr>
             <tr>
-                <td>الكتلة</td>
                 <td>1.90 × 10²⁷ كجم</td>
+                <td>الكتلة</td>
             </tr>
             <tr>
-                <td>مكونات الغلاف الجوي</td>
                 <td>هيدروجين: 90%، هيليوم: 10%</td>
+                <td>مكونات الغلاف الجوي</td>
             </tr>
             <tr>
+                <td>لا يوجد</td>
                 <td>المسطح المائي</td>
-                <td>لا يوجد</td>
             </tr>
             <tr>
+                <td>لا يوجد</td>
                 <td>المسطح اليابس</td>
-                <td>لا يوجد</td>
             </tr>
             <tr>
-                <td>مدة الدوران</td>
                 <td>9 ساعات و55 دقيقة</td>
+                <td>مدة الدوران</td>
             </tr>
             <tr>
-                <td>المدار السنوي</td>
                 <td>11.86 سنة</td>
+                <td>المدار السنوي</td>
             </tr>
             <tr>
-                <td>المسافة من الشمس</td>
                 <td>778.5 مليون كم</td>
+                <td>المسافة من الشمس</td>
             </tr>
             <tr>
-                <td>الأقمار الطبيعية</td>
                 <td>جانيميد، آيو، أوروبا، كاليستو وغيرها</td>
+                <td>الأقمار الطبيعية</td>
             </tr>
         </tbody>
     </table>
-    <div class="description__block">
+    <div class="description__block arabic-right">
         <h5>الخصائص العامة والغلاف الجوي</h5>
         <p>المشتري هو أكبر كوكب في النظام الشمسي، ويتكون معظمه من الهيدروجين والهيليوم. يحتوي غلافه الجوي على سحب من جليد الأمونيا والميثان وبخار الماء. ليس للمشتري سطح صلب، حيث يتكون من الغازات والسوائل.</p>
     </div>
 
-    <div class="description__block">
+    <div class="description__block arabic-right">
         <h5>المناخ والغلاف الجوي</h5>
         <p>يتميز المشتري بوجود دوامات جوية قوية، بما في ذلك البقعة الحمراء العظيمة الشهيرة - وهي عاصفة ضخمة تستمر منذ مئات السنين. يتكون غلافه الجوي بشكل أساسي من الهيدروجين والهيليوم، وتصل درجة الحرارة عند مستوى السحب إلى حوالي -145°م.</p>
     </div>
 
-    <div class="description__block">
+    <div class="description__block arabic-right">
         <h5>محور الدوران والحركة المدارية</h5>
         <p>يكمل المشتري دورة واحدة حول محوره في 9 ساعات و55 دقيقة، مما يجعله أسرع الكواكب دوراناً. تبلغ مدته المدارية 11.86 سنة. يقع الكوكب على بعد حوالي 778.5 مليون كم من الشمس.</p>
     </div>
 
-    <div class="description__block">
+    <div class="description__block arabic-right">
         <h5>الأقمار والحلقات</h5>
         <p>للمشتري أكثر من 70 قمراً معروفاً، بما في ذلك أكبر قمر في النظام الشمسي - جانيميد. كما يمتلك الكوكب حلقات، يصعب رؤيتها بسبب خفتها.</p>
     </div>
