--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
   <script src="/static/js/loader.js" defer></script>
   <script src="/static/js/sound.js" defer></script>
-  <script src="/static/js/script.js" defer></script>
+  <script type="module" src="/static/js/visibility.js" defer></script>
   <script type="module" src="/static/js/2d.js" defer></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/18.6.4/tween.umd.js"></script>
 </body>
