--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
   <audio id="click-sound" src="/static/sounds/click.mp3" preload="auto" audio.volume="0.1"></audio>
 
-  <script src="/static/js/loader.js" defer></script>
+  <script type="module" src="/static/js/loader.js" defer></script>
   <script src="/static/js/sound.js" defer></script>
   <script type="module" src="/static/js/visibility.js" defer></script>
   <script type="module" src="/static/js/2d.js" defer></script>
